updated requirements.txt with Flash and python-socketio

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 ###### Requirements without Version Specifiers ######
-# Examples: 
-# nose
-# nose-cov
-# beautifulsoup4
+Flask
+python-socketio
 
 ###### Requirements with Version Specifiers ######
 # Examples: 
