--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ###### Requirements without Version Specifiers ######
 Flask
 python-socketio
+multiprocess
 
 ###### Requirements with Version Specifiers ######
 # Examples: 
